--- a/00 Doc/Knitr Doc.Rmd
+++ b/00 Doc/Knitr Doc.Rmd
@@ -7,55 +7,58 @@ CS 329E Data Visualization - DV_TableauProject2
 
 **Authors: Bruno De Hoyos (bd8739), Estevan Garza (eg22453)**
 
-###Importing data frames:
+##Importing data frames:
 
 We begin by importing some useful libraries:
 
 ```{r, warning=FALSE}
-require(bitops)
-require(stats)
-require(ggplot2)
-require(grid)
-require(plyr)
-require(reshape2)
-require(RCurl)
-require(gplots)
-require(tidyr)
-require(dplyr)
-require(jsonlite)
+source("../01 SQL Crosstabs/lib.R", echo=TRUE, max.deparse.length=1e3)
 ```
 
+##Rank
 
+**Our first crosstab ranks the regions across New York which have the highest obesity rates. We make sure to group these regions by each grade level, and then by region, to keep the rankings separate using the PARTITION function in SQL.**
 
-**Our first crosstab ranks the regions across New York which have the highest obesity rates. WE also group these regions by each grade level using the PARTITION function in SQL.**
+####SQL:
 ```{r}
 source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
 ```
-![](./rank.png) 
+####Tableau:
+![](./rank2.png) 
 
-
+##Difference
 
 **The next crosstab involves displaying the difference in obesity numbers each region has, partitioned by grade level,from the whichever region has the respectively highest (max amount) rate of student obesity.**
+
+####SQL:
 ```{r, echo=FALSE}
 source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
 ```
-![](./Difference:Max.png) 
+####Tableau:
+![](./diff2.png) 
 
-
+##Nth
 
 **Our next crosstab displays the nth highest rate of obesity in a region given a grade level. In Tableau the nth slider bar allows the user to choose which tier of statistic he or she wants to see.**
+
+####SQL:
 ```{r}
 source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
 ```
-![](./nth.png) 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+####Tableau:
+![](./nth2.png) 
 
+Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.**
 
+##Percentile
 
-**The last crosstab we reproduce involves displaying the cumulative distribution of obesity statistics across regions partitioned by grade** level.  
+**The last crosstab we reproduce involves displaying the cumulative distribution of obesity statistics across regions partitioned by grade level.**
+
+####SQL:
 ```{r}
 source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
 ```
-![](./CumDist.png) 
+####Tableau:
+![](./perc2.png) 
 
 
