removed rank tables

--- a/00 Doc/Knitr Doc.Rmd
+++ b/00 Doc/Knitr Doc.Rmd
@@ -40,8 +40,8 @@ source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
 **The next crosstab involves making a column with the maximum obesity counts for each grade level, and then computing a difference between this maximum count and the current obesity count. The data is partitioned by grade level and region.**
 
 ####SQL:
-```{r, echo=FALSE}
-source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
+```
+SQL query for difference table would have been here.
 ```
 ####Tableau:
 ![](./diff2.png) 
@@ -51,8 +51,8 @@ source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
 **Our next crosstab displays the nth highest rate of obesity in a region given a grade level. In Tableau the nth slider bar allows the user to choose which tier of statistic he or she wants to see. The figure below shows the 2nd highest (n=2) obesity rate for each grade level.**
 
 ####SQL:
-```{r}
-source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
+```
+SQL query for Nth table would have been here.
 ```
 ####Tableau:
 ![](./nth2.png) 
@@ -62,8 +62,8 @@ source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
 **The last crosstab we reproduce involves displaying the cumulative distribution, or percentile, for each of the obesity counts across regions partitioned by grade level.**
 
 ####SQL:
-```{r}
-source("../01 SQL Crosstabs/rank.R", echo=TRUE, max.deparse.length=1e3)
+```
+SQL query for percentile table would have been here.
 ```
 ####Tableau:
 ![](./perc2.png) 
